<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="100dp"
        android:layout_height="120dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/poster" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/card_view"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintTop_toTopOf="@id/card_view">

        <TextView
            android:id="@+id/txt_search_title"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_detail"
            android:text="@string/title_favorite"
            android:textColor="@color/black"
            android:textSize="@dimen/movie_title"
            android:textStyle="bold"
            tools:text="Restless" />

        <TextView
            android:id="@+id/txt_imdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_detail"
            android:text="@string/imdb_point_favorite"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="IMDB: 10" />

        <TextView
            android:id="@+id/txt_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_detail"
            android:text="@string/release_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="Release date: 28/05/2022" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>